--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Title -->
-    <title>Coinland - Multipurpose Template</title>
+    <title>In-Dex Sale</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -37,7 +37,7 @@
                 <nav class="classy-navbar justify-content-between" id="dreamNav">
 
                     <!-- Logo -->
-                    <a class="nav-brand" href="index-2.html"><img draggable="false" src="img/core-img/logo.png" alt="logo"> Coinland.</a>
+                    <a class="nav-brand" href="index-2.html"><img draggable="false" src="img/core-img/logo.png" alt="logo"> In-Dex.</a>
 
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler">
