--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <nav class="classy-navbar justify-content-between" id="dreamNav">
 
                     <!-- Logo -->
-                    <a class="nav-brand" href="index-2.html"><img draggable="false" src="img/core-img/logo.png" alt="logo"> In-Dex.</a>
+                    <a class="nav-brand" href="index-2.html"><img draggable="false" src="img/core-img/IndexSale75x75.png" alt="logo"> In-Dex.</a>
 
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler">
