--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             </ul>
 
                             <!-- Button -->
-                            <a href="#" class="btn login-btn ml-50">Log in</a>
+                            <a href="https://bscscan.com/address/0xCaB9575F4BF9a846a58fCBe1A96AF3e4Bd770366" class="btn login-btn ml-50">Contract BSC</a>
                         </div>
                         <!-- Nav End -->
                     </div>
