--- a/index.html
+++ b/index.html
@@ -96,15 +96,16 @@
                                     <span class="integration-icon">
                                         <img draggable="false" src="img/svg/img-dollar.svg" width="24" height="24" alt="">
                                     </span>
-                                    <span class="integration-text">Discover a new ways to enjoy your World!</span>
+                                    <span class="integration-text">Discover a new Protocol DeFi</span>
                                 </div>
                             </div>
-                            <h1 class="wow fadeInUp" data-wow-delay="0.2s">Buy & sell crypto easier 
-                            Than Ever Before</h1>
-                            <p class="wow fadeInUp" data-wow-delay="0.3s">We have over 15 year exprience in business consultting arena. We have over 15 year exprience in business consultting arena and artficial intelligence.</p>
+                            <h1 class="wow fadeInUp" data-wow-delay="0.2s">In-Dex Sale</h1>
+                            <p class="wow fadeInUp" data-wow-delay="0.3s">In-Dex Sale Token is a utility based token. In-Dex Sale holders makes suggestions and vote on all roadmap.</p>
                             <div class="dream-btn-group wow fadeInUp" data-wow-delay="0.4s">
-                                <a href="#" class="btn dream-btn mr-3">Learn More</a>
-                                <a href="#" class="btn dream-btn">Contact Us</a>
+                                <a href="https://www.pinksale.finance/launchpad/0x1907c2fc23616B0aCA9A9836ff7852b4E746274F?chain=BSC" class="btn dream-btn mr-3">Fairlaunch</a>
+                                <a href="#" class="btn dream-btn">Chart</a>
+                                <a href="https://app.indexsale.finance/" class="btn dream-btn mr-3">Staking</a>
+                                <a href="https://stable.indexsale.finance/" class="btn dream-btn">Staking in USD</a>
                             </div>
                         </div>
                     </div>
