--- a/index.html
+++ b/index.html
@@ -104,11 +104,13 @@
                             <div class="dream-btn-group wow fadeInUp" data-wow-delay="0.4s">
                                 <a href="https://www.pinksale.finance/launchpad/0x1907c2fc23616B0aCA9A9836ff7852b4E746274F?chain=BSC" class="btn dream-btn mr-3">Fairlaunch</a>
                                 <a href="#" class="btn dream-btn">Chart</a>
+                            <div class="dream-btn-group wow fadeInUp" data-wow-delay="0.4s">
                                 <a href="https://app.indexsale.finance/" class="btn dream-btn mr-3">Staking</a>
                                 <a href="https://stable.indexsale.finance/" class="btn dream-btn">Staking in USD</a>
                             </div>
-                        </div>
-                    </div>
+                            </div>
+                            </div>
+                            </div>
                     <!-- Welcome Video Area -->
                     <div class="col-12 col-lg-6 col-md-12">
                         <div class="main-ilustration main-ilustration-4 wow fadeInUp" data-wow-delay="0.5s">
