--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                             </div>
                             <h1 class="wow fadeInUp" data-wow-delay="0.2s">In-Dex Sale</h1>
                             <p class="wow fadeInUp" data-wow-delay="0.3s">In-Dex Sale Token is a utility based token. In-Dex Sale holders makes suggestions and vote on all roadmap.</p>
-                            <div class="dream-btn-group wow fadeInUp" data-wow-delay="0.4s">
+                            <div class="dream-btn-group wow fadeInUp" data-wow-delay="0.2s">
                                 <a href="https://www.pinksale.finance/launchpad/0x1907c2fc23616B0aCA9A9836ff7852b4E746274F?chain=BSC" class="btn dream-btn mr-3">Fairlaunch</a>
                                 <a href="#" class="btn dream-btn">Chart</a>
-                            <div class="dream-btn-group wow fadeInUp" data-wow-delay="0.4s">
+                            <div class="dream-btn-group wow fadeInUp" data-wow-delay="0.3s">
                                 <a href="https://app.indexsale.finance/" class="btn dream-btn mr-3">Staking</a>
                                 <a href="https://stable.indexsale.finance/" class="btn dream-btn">Staking in USD</a>
                             </div>
@@ -125,14 +125,13 @@
 
     <div class="vertical-social">
         <ul>
-            <li><a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-medium" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-            <li><a href="#"> <i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-            
+            <li><a href="https://t.me/InDexSaleGlobal"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
+            <li><a href="https://twitter.com/In_Dex_Sale"><i class="fa fa-twitte" aria-hidden="true"></i></a></li>
+            <li><a href="https://in-dexsale.gitbook.io/in-dex-sale/the-company/in-dex-sale"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+            <li><a href="https://medium.com/@in-dexsale"> <i class="fa fa-medium" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.reddit.com/user/InDexSale"><i class="fa fa-reddit" aria-hidden="true"></i></a></li>
+            <li><a href="https://discord.com/invite/nTv8HD6M6m"><i class="fa fa-discord" aria-hidden="true"></i></a></li>
+                       
         </ul>                  
     </div>
 
