--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <li><a href="https://in-dexsale.gitbook.io/in-dex-sale/the-company/in-dex-sale"><i class="fa fa-github" aria-hidden="true"></i></a></li>
             <li><a href="https://medium.com/@in-dexsale"> <i class="fa fa-medium" aria-hidden="true"></i></a></li>
             <li><a href="https://www.reddit.com/user/InDexSale"><i class="fa fa-reddit" aria-hidden="true"></i></a></li>
-            <li><a href="https://discord.com/invite/nTv8HD6M6m"><i class="fa fa-discord" aria-hidden="true"></i></a></li>
+            <li><a href="https://discord.com/invite/nTv8HD6M6m"><i class="fa fa-external-link" aria-hidden="true"></i></a></li>
                        
         </ul>                  
     </div>
