--- a/index.html
+++ b/index.html
@@ -331,10 +331,14 @@
                         <div class="dream-dots wow fadeInUp" data-wow-delay="0.2s">
                             <span></span><span></span><span></span><span></span><span></span><span></span><span></span>
                         </div>
-                        <h4 class="wow fadeInUp" data-wow-delay="0.3s">We complete every project with extra care as customer need.</h4>
-                        <p class="wow fadeInUp" data-wow-delay="0.4s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at dictum risus, non suscipit arcu. Quisque aliquam posuere tortor, sit amet convallis nunc scelerisque in.</p>
-                        <p class="wow fadeInUp" data-wow-delay="0.5s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo quo laboriosam, dolorum ducimus similique aliquam consequuntur saepe numquam suscipit praesentium fuga eveniet error assumenda eos quasi doloribus ullam autem, quisquam aliquam consequuntur saepe numquam suscipit similique!</p>
-                        <a class="btn dream-btn mt-30 wow fadeInUp" data-wow-delay="0.6s" href="#">Read More</a>
+                        <h4 class="wow fadeInUp" data-wow-delay="0.3s">We Have Accomplished The Following Since September 10 2022 Fair Launch Pinksale.</h4>
+                        <p class="wow fadeInUp" data-wow-delay="0.4s">Acquired Over 10000 Twitter Followers</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.5s">Acquired Over 30000 Telegram Members</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.4s">Hit All Peaple Around The World</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.5s">We Have Achieved Attaining Over 1500 In-Dex Sale Holders</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.4s">We’ve Applied To Be Listed on Coin Market Cap (CMC) Exchange</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.4s">We are On the best notice channels & Organic Incline Of Achievements.</p>
+                        <a class="btn dream-btn mt-30 wow fadeInUp" data-wow-delay="0.6s" href="https://in-dexsale.gitbook.io/in-dex-sale/the-company/in-dex-sale">Read More</a>
                     </div>
                 </div>
 
