--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     <!-- Single Cool Fact -->
                     <div class="trust-item text-center wow fadeInUp" data-wow-delay="0.2s">
                         <div class="ico-platform-logo">
-                            <img draggable="false" src="img/ico-platforms/1.png" alt="">
+                            <img draggable="false" src="img/core-img/1.png" alt="">
                         </div>
                         <!-- Single Cool Detail -->
                         <div class="check">
@@ -218,7 +218,7 @@
                     <!-- Single Cool Fact -->
                     <div class="trust-item text-center wow fadeInUp" data-wow-delay="0.3s">
                         <div class="ico-platform-logo">
-                            <img draggable="false" src="img/ico-platforms/2.png" alt="">
+                            <img draggable="false" src="img/core-img/2.png" alt="">
                         </div>
                         <!-- Single Cool Detail -->
                         <div class="check">
@@ -231,7 +231,7 @@
                     <!-- Single Cool Fact -->
                     <div class="trust-item text-center wow fadeInUp" data-wow-delay="0.4s">
                         <div class="ico-platform-logo">
-                            <img draggable="false" src="img/ico-platforms/3.png" alt="">
+                            <img draggable="false" src="img/core-img/3.png" alt="">
                         </div>
                         <!-- Single Cool Detail -->
                         <div class="check">
@@ -245,7 +245,7 @@
                     <!-- Single Cool Fact -->
                     <div class="trust-item text-center wow fadeInUp" data-wow-delay="0.5s">
                         <div class="ico-platform-logo">
-                            <img draggable="false" src="img/ico-platforms/4.png" alt="">
+                            <img draggable="false" src="img/core-img/4.png" alt="">
                         </div>
                         <!-- Single Cool Detail -->
                         <div class="check">
@@ -259,7 +259,7 @@
                     <!-- Single Cool Fact -->
                     <div class="trust-item text-center wow fadeInUp" data-wow-delay="0.6s">
                         <div class="ico-platform-logo">
-                            <img draggable="false" src="img/ico-platforms/5.png" alt="">
+                            <img draggable="false" src="img/core-img/5.png" alt="">
                         </div>
                         <!-- Single Cool Detail -->
                         <div class="check">
@@ -272,7 +272,7 @@
                     <!-- Single Cool Fact -->
                     <div class="trust-item text-center wow fadeInUp" data-wow-delay="0.7s">
                         <div class="ico-platform-logo">
-                            <img draggable="false" src="img/ico-platforms/6.png" alt="">
+                            <img draggable="false" src="img/core-img/6.png" alt="">
                         </div>
                         <!-- Single Cool Detail -->
                         <div class="check">
