--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         </div>
                         <!-- Single Cool Detail -->
                         <div class="check">
-                            <div class="value">8.9</div>
+                            <div class="check-icon"></div>
                         </div>
                     </div>
                 </div>
@@ -263,7 +263,7 @@
                         </div>
                         <!-- Single Cool Detail -->
                         <div class="check">
-                           <div class="value">7.4</div>
+                           <div class="check-icon"></div>
                         </div>
                     </div>
                 </div>
