--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <span></span><span></span><span></span><span></span><span></span><span></span><span></span>
             </div>
             <h2 class="wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">We are trusted</h2>
-            <p class="wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.</p>
+            <p class="wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">Our mission is to develop the best launchpad in the world! For Startup Easy, fast and secure fund-raising chance with strong community support. Liquidity Provider Safe, fast, low transaction fee and guarantee purchase opportunity.</p>
         </div>
         <div class="container">
             <div class="row">
@@ -360,8 +360,7 @@
                         <div class="dream-dots justify-content-center wow fadeInUp" data-wow-delay="0.2s">
                             <span></span><span></span><span></span><span></span><span></span><span></span><span></span>
                         </div>
-                        <h2 class="wow fadeInUp" data-wow-delay="0.3s">Watch our demo video</h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.4s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.</p>
+                        <h2 class="wow fadeInUp" data-wow-delay="0.3s">Watch our video</h2>                        
                     </div>
             <!-- Welcome Video Area -->
             <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-sm-12">
@@ -372,7 +371,7 @@
                     </div>
                     <!-- Video Icon -->
                     <div class="video-icon">
-                        <a href="https://www.youtube.com/watch?v=gbXEPHsTkgU" class="btn dream-btn video-btn" id="videobtn"><i class="fa fa-play"></i></a>
+                        <a href="https://www.youtube.com/" class="btn dream-btn video-btn" id="videobtn"><i class="fa fa-play"></i></a>
                     </div>
                 </div>
             </div>
@@ -390,8 +389,8 @@
                 <div class="dream-dots justify-content-center wow fadeInUp" data-wow-delay="0.2s">
                     <span></span><span></span><span></span><span></span><span></span><span></span><span></span>
                 </div>
-                <h2 class="wow fadeInUp" data-wow-delay="0.3s">Our Core Services</h2>
-                <p class="wow fadeInUp" data-wow-delay="0.4s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.</p>
+                <h2 class="wow fadeInUp" data-wow-delay="0.3s">About Token</h2>
+                <p class="wow fadeInUp" data-wow-delay="0.4s">One of the main difference of In-Dex Sale is that it is not limited to a specific blockchain. Instead it can support projects from a broad number of networks, centralizing the highest quality projects from all chains onto one launchpad.</p>
             </div>
                 
 
@@ -403,8 +402,8 @@
                         <div class="service_icon">
                             <img draggable="false" src="img/services/1.svg" alt="">
                         </div>
-                        <h6>Smart Trading Modules</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla neque quam, maximus ut accumsan ut, posuere sit Lorem ipsum.</p>
+                        <h6>No Fees</h6>
+                        <p>In-Dex Sale is a multi-chain compatible decentralised exchange aggregator protocol focused on making zero-fee transactions possible. We are aiming to make on-chain trading simple and easy, by providing access to multi-chains like ethereum, BSC under one roof. The core product is being designed to function gasless and focused on aggregating liquidity from multiple protocols.</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-4">
@@ -414,8 +413,8 @@
                         <div class="service_icon">
                             <img draggable="false" src="img/services/2.svg" alt="">
                         </div>
-                        <h6>Adaptive Social Assistant</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla neque quam, maximus ut accumsan ut, posuere sit Lorem ipsum.</p>
+                        <h6>SAFU Contract</h6>
+                        <p>Many we have been subjected to many types of unfortunate events, such as, scams, rug pulls, honey pots, pump/dumps, etc.. that may have caused an unfair loss. For this have safu, kyc, audit.</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-4">
@@ -425,8 +424,8 @@
                         <div class="service_icon">
                             <img draggable="false" src="img/services/3.svg" alt="">
                         </div>
-                        <h6>Analyzer of the News </h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla neque quam, maximus ut accumsan ut, posuere sit Lorem ipsum.</p>
+                        <h6>Why Static?</h6>
+                        <p>Static rewards solve a host of problems. First, the reward amount is conditional upon the volume of the token being traded. This mechanism aims to alleviate some of the downward sell pressure put on the token caused by earlier adopters selling their tokens after farming crazy high APY’s.</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-4">
@@ -436,8 +435,8 @@
                         <div class="service_icon">
                             <img draggable="false" src="img/services/4.svg" alt="">
                         </div>
-                        <h6>Exchange Order Management</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla neque quam, maximus ut accumsan ut, posuere sit Lorem ipsum.</p>
+                        <h6>Influencers backed</h6>
+                        <p> In-Dex Sale value propositions is that it is built and supported, for the  marketers professionals and influencers resulting in broader distributions, much better project exposure and more precise marketing.</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-4">
@@ -447,8 +446,8 @@
                         <div class="service_icon">
                             <img draggable="false" src="img/services/5.svg" alt="">
                         </div>
-                        <h6>Module of Price Notification</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla neque quam, maximus ut accumsan ut, posuere sit Lorem ipsum.</p>
+                        <h6>Manual Burns</h6>
+                        <p>A continuous burn in any protocol can be good for the first few days.</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-4">
@@ -458,8 +457,8 @@
                         <div class="service_icon">
                             <img draggable="false" src="img/services/6.svg" alt="">
                         </div>
-                        <h6>Crypto Trading Platform</h6>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla neque quam, maximus ut accumsan ut, posuere sit Lorem ipsum.</p>
+                        <h6>About In-Dex</h6>
+                        <p>The In-Dex Sale is a community driven deFi token, 100000 supply and fairlaunch on pinksale.</p>
                     </div>
                 </div>
             </div>
@@ -476,82 +475,88 @@
                 <div class="dream-dots justify-content-center wow fadeInUp" data-wow-delay="0.2s">
                     <span></span><span></span><span></span><span></span><span></span><span></span><span></span>
                 </div>
-                <h2 class="wow fadeInUp" data-wow-delay="0.3s">Our ICO Roadmap</h2>
-                <p class="wow fadeInUp" data-wow-delay="0.4s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.</p>
+                <h2 class="wow fadeInUp" data-wow-delay="0.3s">Our Roadmap</h2>
+                <p class="wow fadeInUp" data-wow-delay="0.4s">-2022 / 2023</p>
             </div>
             <div class="row">
                 <div class="section_5-content">
                     <div class="section_5-slider-trumb"></div>
                     <div id="section_5-slider-circle">
-                        <div style="left:10%" class="data_cir cir_0" data-date="Q2 2022">
+                        <div style="left:10%" class="data_cir cir_0" data-date="2022">
                             <div class="data_cir-content">
-                                <span><span class="roadmap_content_info">Emergence and design of the idea</span><span class="roadmap_img"><img draggable="false" src="img/roadmap-icons/1.svg" alt=""></span></span>
+                                <span><span class="roadmap_content_info">Design of the idea</span><span class="roadmap_img"><img draggable="false" src="img/roadmap-icons/1.svg" alt=""></span></span>
                             </div>
                         </div>
-                        <div style="left:20%" class="data_cir cir_1" data-date="Q3 2017">
+                        <div style="left:20%" class="data_cir cir_1" data-date="Q2 2022">
                             <div class="data_cir-content">
-                                <span><span class="roadmap_content_info"><ul><li><span>built our team</span></li>
-                                <li><span>company establishment</span></li>
-                                <li><span>legal issues setting</span></li>
-                                <li><span> concept development</span></li>
+                                <span><span class="roadmap_content_info"><ul><li><span>Website Development</span></li>
+                                <li><span>Whitepaper</span></li>
+                                <li><span>Working in SAFU smart contract</span></li>
+                                <li><span>Fixed swap protocol</span></li>
                                 </ul>
                                 </span><span class="roadmap_img"><img draggable="false" src="img/roadmap-icons/2.svg" alt=""></span></span>
                             </div>
                         </div>
-                        <div style="left:30%" class="data_cir cir_2" data-date="Q4 2022">
+                        <div style="left:30%" class="data_cir cir_2" data-date="Q3 2022">
                             <div class="data_cir-content">
-                                <span><span class="roadmap_content_info"><ul><li><span> start development of the ealier version and crypto wallet version</span></li>
-                                <li><span>negotiations on partnerships</span></li>
-                                </ul>
+                                <span><span class="roadmap_content_info"><ul><li><span>AUDIT, KYC, SAFU on Pinksale</span></li>
+                                <li><span>Fair launch on Pinksale</span></li>
+                                <li><span>CMC and Coingeko Listing</span></li>
+                                <li><span>AMA on best telegrans groups</span></li>
+                                <li><span>Marketing on Twitter</span></li>
+                                <li><span>PancakeSwap listing</span></li>   
+                             </ul>
                                 </span><span class="roadmap_img"><img draggable="false" src="img/roadmap-icons/3.svg" alt=""></span></span>
                             </div>
                         </div>
-                        <div style="left:40%" class="data_cir cir_3" data-date="Q1 2022">
+                        <div style="left:40%" class="data_cir cir_3" data-date="Q4 2022">
                             <div class="data_cir-content">
-                                <span><span class="roadmap_content_info"><ul><li><span>website launch</span></li>
-                                <li><span>White Paper published</span></li>
-                                <li><span>Private and Pre-sale start</span></li>
+                                <span><span class="roadmap_content_info"><ul><li><span>Insurance Protocol tests Evaluation Pool</span></li>
+                                <li><span>Youtubers marketing influencers</span></li>
+                                <li><span>In-Dex Sale Pools</span></li>
+                                <li><span>ETH contract launch</span></li>
                                 </ul>
                                 </span><span class="roadmap_img"><img draggable="false" src="img/roadmap-icons/4.svg" alt=""></span></span>
                             </div>
                         </div>
-                        <div style="left:50%" class="data_cir cir_4 red_crc" data-date="Q2 2022">
+                        <div style="left:50%" class="data_cir cir_4 red_crc" data-date="Q1 2023">
                             <div class="data_cir-content">
-                                <span><span class="roadmap_content_info"><ul><li><span>Crowdsale</span></li>
-                                <li><span>marketing campaign</span></li>
-                                <li><span>listing to the major exchanges</span></li>
+                                <span><span class="roadmap_content_info"><ul><li><span>Dapp Upgrade</span></li>
+                                <li><span>Bridge</span></li>
+                                <li><span>Certik Audit</span></li>
+                                <li><span>Expand Marketing</span></li>
+                                <li><span>Launchpad</span></li>
                                 </ul>
                                 </span><span class="roadmap_img"><img draggable="false" src="img/roadmap-icons/5.svg" alt=""></span></span>
                             </div>
                         </div>
-                        <div style="left:60%" class="data_cir cir_5 next" data-date="Q3 2022">
+                        <div style="left:60%" class="data_cir cir_5 next" data-date="Q2 2023">
                             <div class="data_cir-content">
-                                <span><span class="roadmap_content_info"><ul><li><span>Crypto Wallet version release</span></li>
-                                <li><span>Testnet launch</span></li>
-                                <li><span> Platform ealier version development</span></li>
+                                <span><span class="roadmap_content_info"><ul><li><span>Stablecoin</span></li>
+                                <li><span>Whitepaper update </span></li>
                                 </ul>
                                 </span><span class="roadmap_img"><img draggable="false" src="img/roadmap-icons/6.svg" alt=""></span></span>
                             </div>
                         </div>
-                        <div style="left:70%" class="data_cir cir_6 next" data-date="Q4 2022">
+                        <div style="left:70%" class="data_cir cir_6 next" data-date="Q2 2023">
                             <div class="data_cir-content">
-                                <span><span class="roadmap_content_info"><ul><li><span>Mobile App</span></li>
-                                <li><span>Explorer</span></li>
-                                <li><span>new partnerships and new marketplace support</span></li>
+                                <span><span class="roadmap_content_info"><ul><li><span>Upgrade for the benefit of investors</span></li>
+                                <li><span>Crosschain Upgrade</span></li>
                                 </ul>
                                 </span><span class="roadmap_img"><img draggable="false" src="img/roadmap-icons/7.svg" alt=""></span></span>
                             </div>
                         </div>
-                        <div style="left:80%" class="data_cir cir_7 next" data-date="Q1 2022">
+                        <div style="left:80%" class="data_cir cir_7 next" data-date="Q3 2023">
                             <div class="data_cir-content">
-                                <span><span class="roadmap_content_info"><ul><li><span>Mainnet launch</span></li>
-                                <li><span>Wallet beta-version release</span></li>
-                                <li><span>Masternodes implementation</span></li>
+                                <span><span class="roadmap_content_info"><ul><li><span>Lending</span></li>
+                                <li><span>Governance</span></li>
+                                <li><span>Development the Ecossystem of In-Dex Sale</span></li>
+                                <li><span>TBA</span></li>
                                 </ul>
                                 </span><span class="roadmap_img"><img draggable="false" src="img/roadmap-icons/8.svg" alt=""></span></span>
                             </div>
                         </div>
-                        <div style="left:90%" class="data_cir cir_8 next" data-date="Q2 2022">
+                        <div style="left:90%" class="data_cir cir_8 next" data-date="Q3 2023">
                             <div class="data_cir-content">
                                 <span><span class="roadmap_content_info"><ul><li><span> Platform integration to electronic marketplaces</span></li>
                                 <li><span>Zero Fee</span></li>
