--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                     </div>
                     <!-- Video Icon -->
                     <div class="video-icon">
-                        <a href="https://www.youtube.com/" class="btn dream-btn video-btn" id="videobtn"><i class="fa fa-play"></i></a>
+                        <a href="https://www.youtube.com/watch?v=S2FjF_HPfiE" class="btn dream-btn video-btn" id="videobtn"><i class="fa fa-play"></i></a>
                     </div>
                 </div>
             </div>
