--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                                 <span><span class="roadmap_content_info"><ul><li><span>AUDIT, KYC, SAFU on Pinksale</span></li>
                                 <li><span>Fair launch on Pinksale</span></li>
                                 <li><span>CMC and Coingeko Listing</span></li>
-                                <li><span>AMA on best telegrans groups</span></li>
+                                <li><span>AMA on best telegram groups</span></li>
                                 <li><span>Marketing on Twitter</span></li>
                                 <li><span>PancakeSwap listing</span></li>   
                              </ul>
@@ -556,10 +556,13 @@
                                 </span><span class="roadmap_img"><img draggable="false" src="img/roadmap-icons/8.svg" alt=""></span></span>
                             </div>
                         </div>
-                        <div style="left:90%" class="data_cir cir_8 next" data-date="Q3 2023">
+                        <div style="left:90%" class="data_cir cir_8 next" data-date="AMAS">
                             <div class="data_cir-content">
-                                <span><span class="roadmap_content_info"><ul><li><span> Platform integration to electronic marketplaces</span></li>
-                                <li><span>Zero Fee</span></li>
+                                <span><span class="roadmap_content_info"><ul><li><span>GOLLUM'S GEMS</span></li>
+                                <li><span>VENOMCALLS</span></li>
+                                <li><span>THE SOLITAIRE PRESTIGE</span></li>
+                                <li><span>SHILL SEALS</span></li>
+                                <li><span>WHALE COIN TALK</span></li>
                                 </ul>
                                 </span><span class="roadmap_img"><img draggable="false" src="img/roadmap-icons/9.svg" alt=""></span></span>
                             </div>
