--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@
                             <div class="footer-social-info wow fadeInUp" data-wow-delay="0.4s">
                                 <a href="https://facebook.com/indexsale"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                                 <a href="https://twitter.com/In_Dex_Sale"> <i class="fa fa-twitter" aria-hidden="true"></i></a>
-                                <a href="https://in-dexsale.gitbook.io/in-dex-sale/the-company/in-dex-sale"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                                <a href="https://in-dexsale.gitbook.io/in-dex-sale/the-company/in-dex-sale"><i class="fa fa-github" aria-hidden="true"></i></a>
                                 <a href="https://medium.com/@in-dexsale"><i class="fa fa-medium" aria-hidden="true"></i></a>
                                 <a href="https://discord.com/invite/nTv8HD6M6m"><i class="fa fa-external-link" aria-hidden="true"></i></a>
                             </div>
