--- a/index.html
+++ b/index.html
@@ -598,15 +598,15 @@
                             </div>
                             <div class="col-lg-5 col-lg-offset-1 col-sm-12 text-center">
                                 <span class="telegram-text">Join our chat: </span>
-                                <a href="" class="button"><i class="fa fa-telegram"></i>Telegram</a>
+                                <a href="https://t.me/InDexSaleGlobal" class="button"><i class="fa fa-telegram"></i>Telegram</a>
                             </div>
                             <div class="col-lg-5 col-sm-12 text-center">
                                 <ul class="list-unstyled list-inline social-list">
-                                    <li><a href=""><i class="fa fa-facebook-square"></i></a></li>
-                                    <li><a href=""><i class="fa fa-twitter-square"></i></a></li>
-                                    <li><a href=""><i class="fa fa-github-square"></i></a></li>
-                                    <li><a href=""><i class="fa fa-instagram"></i></a></li>
-                                    <li><a href=""><i class="fa fa-medium"></i></a></li>
+                                    <li><a href=https://www.facebook.com/indexsale""><i class="fa fa-facebook-square"></i></a></li>
+                                    <li><a href="https://twitter.com/In_Dex_Sale"><i class="fa fa-twitter-square"></i></a></li>
+                                    <li><a href="https://in-dexsale.gitbook.io/in-dex-sale/the-company/in-dex-sale"><i class="fa fa-github-square"></i></a></li>
+                                    <li><a href="https://www.instagram.com/index_sale/"><i class="fa fa-instagram"></i></a></li>
+                                    <li><a href="https://medium.com/@in-dexsale"><i class="fa fa-medium"></i></a></li>
                                 </ul>
                             </div>
                             
