--- a/index.html
+++ b/index.html
@@ -700,22 +700,22 @@
                         <div class="row">
                             <div class="col-md-6 col-sm-6 col-xs-12">
                                 <div class="doc-element">
-                                    <a class="document-entry" href="#" target="_blank"><span class="title">WhitePaper</span></a>
+                                    <a class="document-entry" href="https://in-dexsale.gitbook.io/in-dex-sale/the-company/in-dex-sale" target="_blank"><span class="title">WhitePaper</span></a>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-6 col-xs-12">
                                 <div class="doc-element">
-                                    <a class="document-entry" href="#" target="_blank"><span class="title">OnePager</span></a>
+                                    <a class="document-entry" href="https://in-dexsale.gitbook.io/in-dex-sale/ecossystem" target="_blank"><span class="title">Ecossystem</span></a>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-6 col-xs-12">
                                 <div class="doc-element">
-                                    <a class="document-entry" href="#" target="_blank"><span class="title">Rating Review</span></a>
+                                    <a class="document-entry" href="https://in-dexsale.gitbook.io/in-dex-sale/safu-kyc-audit" target="_blank"><span class="title">SAFU/KYC/AUDIT Review</span></a>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-6 col-xs-12">
                                 <div class="doc-element">
-                                    <a class="document-entry" href="#" target="_blank"><span class="title">Marketing Plan</span></a>
+                                    <a class="document-entry" href="https://in-dexsale.gitbook.io/in-dex-sale/tokenomics/roadmap" target="_blank"><span class="title">Marketing Plan</span></a>
                                 </div>
                             </div>
 
@@ -737,7 +737,7 @@
                 <div class="dream-dots justify-content-center wow fadeInUp" data-wow-delay="0.2s">
                     <span></span><span></span><span></span><span></span><span></span><span></span><span></span>
                 </div>
-                <h2 class="wow fadeInUp" data-wow-delay="0.3s">Our ICO Distribution</h2>
+                <h2 class="wow fadeInUp" data-wow-delay="0.3s">Our Pinksale Distribution</h2>
                 <p class="wow fadeInUp" data-wow-delay="0.4s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.</p>
             </div>
 
