--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
                             </div>
                             <div class="col-md-6 col-sm-6 col-xs-12">
                                 <div class="doc-element">
-                                    <a class="document-entry" href="https://in-dexsale.gitbook.io/in-dex-sale/safu-kyc-audit" target="_blank"><span class="title">SAFU/KYC/AUDIT Review</span></a>
+                                    <a class="document-entry" href="https://in-dexsale.gitbook.io/in-dex-sale/safu-kyc-audit" target="_blank"><span class="title">SAFU/KYC/AUDIT</span></a>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-6 col-xs-12">
