--- a/index.html
+++ b/index.html
@@ -738,7 +738,8 @@
                     <span></span><span></span><span></span><span></span><span></span><span></span><span></span>
                 </div>
                 <h2 class="wow fadeInUp" data-wow-delay="0.3s">Our Pinksale Distribution</h2>
-                <p class="wow fadeInUp" data-wow-delay="0.4s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.</p>
+                <p class="wow fadeInUp" data-wow-delay="0.4s">We have perfectly chosen the best AMA groups in the current crypto market!
+</p>
             </div>
 
             <div class="col-lg-6 col-md-6 col-sm-12">
@@ -797,8 +798,9 @@
                             <span></span>
                             <span></span>
                         </div>
-                        <h2 class="wow fadeInUp" data-wow-delay="0.3s">Awesome Team</h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.4s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis accumsan nisi Ut ut felis congue nisl hendrerit commodo. </p>
+                        <h2 class="wow fadeInUp" data-wow-delay="0.3s">AMA Call's Groups</h2>
+                        <p class="wow fadeInUp" data-wow-delay="0.4s">We have perfectly chosen the best AMA cryptocurrency groups
+</p>
                     </div>
                 </div>
             </div>
