--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <span></span><span></span><span></span><span></span><span></span><span></span><span></span>
             </div>
             <h2 class="wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">We are trusted</h2>
-            <p class="wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">Our mission is to develop the best launchpad in the world! For Startup Easy, fast and secure fund-raising chance with strong community support. Liquidity Provider Safe, fast, low transaction fee and guarantee purchase opportunity.</p>
+            <p class="wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">We chose pinksale for being the largest decentralized platform in the world, and for having strict kyc, safu and audit procedures. In addition, with pinksale we were able to reach an immense range of investors.</p>
         </div>
         <div class="container">
             <div class="row">
@@ -311,10 +311,10 @@
                         <div class="dream-dots wow fadeInUp" data-wow-delay="0.2s">
                             <span></span><span></span><span></span><span></span><span></span><span></span><span></span>
                         </div>
-                        <h4 class="wow fadeInUp" data-wow-delay="0.3s">We complete every project with extra care as customer need.</h4>
-                        <p class="wow fadeInUp" data-wow-delay="0.4s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at dictum risus, non suscipit arcu. Quisque aliquam posuere tortor, sit amet convallis nunc scelerisque in.</p>
-                        <p class="wow fadeInUp" data-wow-delay="0.5s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore eius molestiae facere, natus reprehenderit eaque eum, autem ipsam. Magni, error. Tempora odit laborum iure inventore possimus laboriosam qui nam. Fugit!</p>
-                        <a class="btn dream-btn mt-30 wow fadeInUp" data-wow-delay="0.6s" href="#">Read More</a>
+                        <h4 class="wow fadeInUp" data-wow-delay="0.3s">HOLD In-Dex Sale to get rewards on staking your tokens!</h4>
+                        <p class="wow fadeInUp" data-wow-delay="0.4s">A smart contract in which you can stake both LP tokens and solo tokens in order to receive income in tokens of the protocol you are using is called a Farm because all these pools are controlled with a MasterChef Farm smart contract.</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.5s">If you have an income in tokens of used protocol, regardless of whether you put an LP token (a pair of tokens) or a regular token into a smart contract, all of this belongs to the MasterChef contract and should be called a Farm.</p>
+                        <a class="btn dream-btn mt-30 wow fadeInUp" data-wow-delay="0.6s" href="https://app.indexsale.finance/">Staking Farms</a>
                     </div>
                 </div>
 
@@ -623,7 +623,7 @@
                             <span></span><span></span><span></span><span></span><span></span><span></span><span></span>
                         </div>
                         <h2 class="wow fadeInUp" data-wow-delay="0.3s">Frequently Asked Questions</h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.4s" style="margin-left:0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.4s" style="margin-left:0">In-Dex Sale Coin is a utility based token. In-dex Sale coin holders makes suggestions and vote on ecossystem, and possibility to enter on launching projects.</p>
                     </div>
 
                     <div class="dream-faq-area">
@@ -631,22 +631,22 @@
                             <!-- Single FAQ Area -->
                             <dt class="wave wow fadeInUp" data-wow-delay="0.2s">What are the objectives of this token?</dt>
                             <dd class="wow fadeInUp" data-wow-delay="0.3s">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore omnis quaerat nostrum, pariatur ipsam sunt accusamus enim necessitatibus est fugiat, assumenda dolorem, deleniti corrupti cupiditate ipsum, dolorum voluptatum esse error?</p>
+                                <p>Many investors may have been subjected to many types of events such as blows, rug pulling, honey pots, bombs/evictions, etc... which may have caused a loss. So be around a while and even experiencing some of these dire circumstances, we concluded that we needed a solution, so we do SAFU, AUDIT, KYC.</p>
                             </dd>
                             <!-- Single FAQ Area -->
-                            <dt class="wave wow fadeInUp" data-wow-delay="0.3s">What is Token Sale and pre-sale?</dt>
+                            <dt class="wave wow fadeInUp" data-wow-delay="0.3s">Why did the team create an in-dex?</dt>
                             <dd>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore omnis quaerat nostrum, pariatur ipsam sunt accusamus enim necessitatibus est fugiat, assumenda dolorem, deleniti corrupti cupiditate ipsum, dolorum voluptatum esse error?</p>
+                                <p>Given this increased demand for the concept of decentralized finance, we at In-Dex Sale have developed a launch platform, where we prioritize easy, fast, and secure fundraising opportunities with strong community support.Liquidity Provider Safe, fast, low transaction fee and guarantee purchase opportunity. We at In-Dex Sale are one of the first multi-chain release platforms, with our IDXS token,wich as the more important of launchpad which will be required to governance, and allocations in projects swap fee, farms, pools, brigde multichain fees, card NFt game.”</p>
                             </dd>
                             <!-- Single FAQ Area -->
-                            <dt class="wave wow fadeInUp" data-wow-delay="0.4s">What is the pre-sale start date?</dt>
+                            <dt class="wave wow fadeInUp" data-wow-delay="0.4s">Why Static?</dt>
                             <dd>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore omnis quaerat nostrum, pariatur ipsam sunt accusamus enim necessitatibus est fugiat, assumenda dolorem, deleniti corrupti cupiditate ipsum, dolorum voluptatum esse error?</p>
+                                <p>Static rewards solve a host of problems. First, reward amount is conditional upon the volume of the token traded. This mechanism aims to alleviate some of the downward sell pressure put on the token caused by earlier adopters selling their tokens after farming crazy high APY’s. Second, the reflect mechanism encourages holders to hang onto their tokens to gain more higher.Static Rewards, implement the manual burn buyback. This happens when there is selling. With this, we guarantee that LIQUIDITY POOL is always fuller during buy/sell transactions.</p>
                             </dd>
                             <!-- Single FAQ Area -->
-                            <dt class="wave wow fadeInUp" data-wow-delay="0.5s">how may I take part in pre-sale?</dt>
+                            <dt class="wave wow fadeInUp" data-wow-delay="0.5s">Pre-Sale Start Date</dt>
                             <dd>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore omnis quaerat nostrum, pariatur ipsam sunt accusamus enim necessitatibus est fugiat, assumenda dolorem, deleniti corrupti cupiditate ipsum, dolorum voluptatum esse error?</p>
+                                <p>2022.09.05 15:00 (UTC)</p>
                             </dd>
                         </dl>
                     </div>
