--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                     <div class="subscribe-wrapper">
                         <div class="section-heading text-center">
                             <h2 class="wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">Don’t Miss Pinksale Fairlaunch!</h2>
-                            <p class="wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">In-Dex Sale most exciting feature is that it’s the created in weeks Independent liquidity pool and it put the true power in each holders hands. It minimizes and frustrates rug pulls, price manipulations and pump/dumps schemes. Our Smart Chain Contract promotes actual assurance and insurance for the growth for our holders.</p>
+                            <p class="wow fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">In-Dex Sale most exciting feature is that it’s the created in weeks Independent liquidity pool and it put the true power in each holders hands. It minimizes and frustrates rug pulls, price manipulations and pump/dumps schemes.</p>
                         </div>
                         <div class="service-text">
                             <div class="col-lg-5 col-lg-offset-1 col-sm-12 text-center">
