--- a/index.html
+++ b/index.html
@@ -741,8 +741,7 @@
                     <span></span><span></span><span></span><span></span><span></span><span></span><span></span>
                 </div>
                 <h2 class="wow fadeInUp" data-wow-delay="0.3s">Our Pinksale Distribution</h2>
-                <p class="wow fadeInUp" data-wow-delay="0.4s">We have perfectly chosen the best AMA groups in the current crypto market!
-</p>
+                <p class="wow fadeInUp" data-wow-delay="0.4s">PinkSale helps everyone to create their own tokens and token sales in few seconds. Tokens created on PinkSale will be verified and published on explorer websites.</p>
             </div>
 
             <div class="col-lg-6 col-md-6 col-sm-12">
